--- a/index.html
+++ b/index.html
@@ -1,9 +1,67 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="author" content="Steve Göring">
+   <head>
     <title>stg7.github.io</title>
-</head>
-<body>
-empty
-</body>
+
+        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
+        <!-- Latest compiled and minified CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+
+        <!-- Optional theme -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+
+        <!-- Latest compiled and minified JavaScript -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
+        <link rel="stylesheet" href="page.css">
+
+        <link href='https://fonts.googleapis.com/css?family=Orbitron:900' rel='stylesheet' type='text/css'>
+
+  </head>
+
+  <body>
+    <nav class="navbar">
+        <div class="container">
+
+            <a href="./index.html" class="logo">stg7.github.io</a>
+
+            <ul class="nav navbar-nav navbar-right">
+                <li>
+                    <a href="http://github.com/stg7/" target="_blank">
+                    <img src="https://assets-cdn.github.com/images/modules/logos_page/GitHub-Mark.png" style="height:1.5em" />
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <hr>
+    <div class="maincontent">
+        <section class="container theme-showcase" role="main" style="height:80%">
+
+            <h3>Projects</h3>
+            a few of my projects:
+
+            <ul>
+                <li><a href="http://stg7.github.io/phrasit/" target="_blank">PhrasIt</a></li>
+                <li><a href="http://github.com/stg7/ctag/" target="_blank">Ctag</a></li>
+                <li><a href="http://stg7.bplaced.net/" target="_blank">my Homepage</a></li>
+            </ul>
+
+            <h3>Contact</h3>
+            <ul>
+                <li>email: <a href="mailto:stg7@gmx.de">stg7@gmx.de</a></li>
+                <li>xmpp: stg7@jabber.ccc.de</li>
+            </ul>
+
+        </section>
+    </div>
+
+  </body>
+
 </html>
