add bitbucket profile link

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                 <li><a href="http://stg7.github.io/phrasit/" target="_blank">PhrasIt</a></li>
                 <li><a href="http://github.com/stg7/ctag/" target="_blank">Ctag</a></li>
                 <li><a href="http://stg7.bplaced.net/" target="_blank">my Homepage</a></li>
+                <li><a href="https://bitbucket.org/stg7/" target="_blank">bitbucket</a></li>
             </ul>
 
             <h3>Contact</h3>
