--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                 <li><a href="http://github.com/stg7/ctag/" target="_blank">Ctag</a></li>
                 <li><a href="http://stg7.bplaced.net/" target="_blank">my Homepage</a></li>
                 <li><a href="https://bitbucket.org/stg7/" target="_blank">bitbucket</a></li>
+                <li><a href="https://gist.github.com/stg7" target="_blank">my gists</a></li>
             </ul>
 
             <h3>Contact</h3>
