--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
 
             <ul>
                 <li><a href="http://stg7.github.io/phrasit/" target="_blank">PhrasIt</a></li>
-                <li><a href="http://stg7.github.io/vinet/" target="_blank">ViNet</a></li>
+              <!--
+                <li><a href="http://www.github.com/stg7/vinet/" target="_blank">ViNet</a></li>
+                -->
                 <li><a href="http://github.com/stg7/ctag/" target="_blank">Ctag</a></li>
                 <li><a href="http://stg7.bplaced.net/" target="_blank">my Homepage</a></li>
                 <li><a href="https://bitbucket.org/stg7/" target="_blank">bitbucket</a></li>
