--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
                 <li><a href="https://gist.github.com/stg7" target="_blank">my gists</a></li>
             </ul>
 
+            <h3>Publications</h3>
+            {{pubs}}
             <h3>Contact</h3>
             <ul>
                 <li>email: <a href="mailto:stg7@gmx.de">stg7@gmx.de</a></li>
