fix artivle part in xml definition to support pdf, slides and poster tags

--- a/index.html
+++ b/index.html
@@ -50,11 +50,6 @@
             I will share some of my projects and research papers on this page.
             Most of my developed software is public available on github.
 
-            <p>
-                Some of my notes are organzized in my Markdown Blog
-
-            </p>
-
             <h3>Projects</h3>
             Here are some of my projects:
             <ul>
@@ -69,7 +64,13 @@
 
             <h3>Publications</h3>
             In the last years I published several papers on conferences or wrote scientific theses (master, bachelor, or some other short texts).
-            <h4 id="bib-year-2017">2017</h4><p  class="bibentries-one-year">
+            <h4 id="bib-year-2018">2018</h4><p  class="bibentries-one-year">
+  <p class="bibentry">Steve G&#246;ring, Janto Skowronek and Alexander Raake. <b>"DeViQ -- A deep no reference video quality model." </b><i>Electronic Imaging</i>. 2018.
+	
+		&#160;<a href="./pdfs/2018/deviq_paper.pdf" target="_blank">[pdf]</a>
+		&#160;<a href="./pdfs/2018/deviq_slides.pdf" target="_blank">[slides]</a></p>
+</p>
+<h4 id="bib-year-2017">2017</h4><p  class="bibentries-one-year">
   <p class="bibentry">Steve G&#246;ring, Alexander Raake and Bernhard Feiten. <b>"A framework for QoE analysis of encrypted video streams." </b><i>2017 Ninth International Conference on Quality of Multimedia Experience (QoMEX)</i>. May&#160;2017.
 	
 	     pp.&#160;1-3.
