--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             I'm a computer scientist and researcher.
             Currently I'm working at the <a href="http://www.tu-ilmenau.de/en/audio-visual-technology/" target="_blank">Audiovisual Technology Group</a> in Ilmenau.
             I will share some of my projects and research papers on this page.
-            Most of my developed software is public available on github.
+            Most of my developed software is publicly available on github.
 
             <h3>projects</h3>
             Here are some of my projects:
@@ -64,9 +64,9 @@
             You can find more on my <a href="http://github.com/stg7/" target="_blank">github</a> page.
 
             <h3>publications</h3>
-            In the last years I published several papers on conferences or wrote scientific theses (master, bachelor, or some other short texts).
+            In the last years I published several papers on conferences or wrote scientific theses/publications (master, bachelor, or some other short texts).
             <h4 id="bib-year-2018">2018</h4><p  class="bibentries-one-year">
-  <p class="bibentry">Robitza, Werner, G&#246;ring, Steve, Raake, Alexander, Lindegren, David, and Heikkil&#228;. <b>"HTTP Adaptive Streaming QoE Estimation with ITU-T Rec. P.1203 &#8211; Open Databases and Software." </b><i>9th ACM Multimedia Systems Conference</i>. Amsterdam.
+  <p class="bibentry">Werner Robitza, Steve G&#246;ring, Alexander Raake, David Lindegren, Gunnar Heikkil&#228;, J&#246;rgen Gustafsson, Peter List, Bernhard Feiten, Ulf W&#252;stenhagen, Marie-Neige Garcia, Kazuhisa Yamagishi, and Simon Broom. <b>"HTTP Adaptive Streaming QoE Estimation with ITU-T Rec. P.1203 -- Open Databases and Software." </b><i>9th ACM Multimedia Systems Conference</i>. Amsterdam.
 	2018.
 	</p>
   <p class="bibentry">Werner Robitza, Dhananjay Kittur, Alexander Dethof, Steve G&#246;ring, Bernhard Feiten, and Alexander Raake. <b>"Measuring YouTube QoE Under Constrained Bandwidth Conditions - Comparing Classical and Behavioral Monitoring." </b><i>2018 Tenth International Conference on Quality of Multimedia Experience (QoMEX) (QoMEX 2018)</i>. Sardinia, Italy.
@@ -77,7 +77,7 @@
 	
 		&#160;<a href="./pdfs/2018/2018-qomex-Extended Features using Machine Learning Techniques for Photo Liking Prediction.pdf" target="_blank">[pdf]</a>
 		&#160;<a href="./pdfs/2018/2018-qomex-Extended Features using Machine Learning Techniques for Photo Liking Prediction_slides.pdf" target="_blank">[slides]</a></p>
-  <p class="bibentry">Steve G&#246;ring, Janto Skowronek and Alexander Raake. <b>"DeViQ -- A deep no reference video quality model." </b><i>Electronic Imaging</i>. 2018.
+  <p class="bibentry">Steve G&#246;ring, Janto Skowronek and Alexander Raake. <b>"DeViQ -- A deep no reference video quality model." </b><i>Electronic Imaging, Human Vision Electronic Imaging</i>. 2018.
 	
 		&#160;<a href="./pdfs/2018/deviq_paper.pdf" target="_blank">[pdf]</a>
 		&#160;<a href="./pdfs/2018/deviq_slides.pdf" target="_blank">[slides]</a></p>
