--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@
             <h3>publications</h3>
             In the last years I published several papers on conferences or wrote scientific theses/publications (master, bachelor, or some other short texts).
             <h4 id="bib-year-2018">2018</h4><p  class="bibentries-one-year">
+  <p class="bibentry">Steve G&#246;ring and Alexander Raake. <b>"deimeq -- A Deep Neural Network Based Hybrid No-reference Image Quality Model." </b><i>Visual Information Processing (EUVIP), 2018 7th European Workshop on</i>. IEEE.
+	2018.
+	
+	     pp.&#160;1--6.
+	to appear.
+	</p>
   <p class="bibentry">Werner Robitza, Steve G&#246;ring, Alexander Raake, David Lindegren, Gunnar Heikkil&#228;, J&#246;rgen Gustafsson, Peter List, Bernhard Feiten, Ulf W&#252;stenhagen, Marie-Neige Garcia, Kazuhisa Yamagishi, and Simon Broom. <b>"HTTP Adaptive Streaming QoE Estimation with ITU-T Rec. P.1203 -- Open Databases and Software." </b><i>9th ACM Multimedia Systems Conference</i>. Amsterdam.
 	2018.
 	</p>
