add first idea of a better system, based on MD files

--- a/documents.html
+++ b/documents.html
@@ -22,10 +22,10 @@
         <link rel="stylesheet" href="page.css">
 
         <link href='https://fonts.googleapis.com/css?family=Orbitron:900' rel='stylesheet' type='text/css'>
-<script src="html-table-of-contents.js" type="text/javascript"></script>
+
   </head>
 
-  <body onload="htmlTableOfContents();">
+  <body>
     <nav class="navbar">
         <div class="container">
             <a href="./index.html" class="logo">stg7.github.io</a>
@@ -41,36 +41,56 @@
     <hr>
     <div class="maincontent">
         <section id="toc" class="container theme-showcase">
+        <p><a href="index.html">Start</a> | <a href="documents.html">/Documents/</a> | <a href="publications.html">Publications</a></p>
+
         </section>
         <hr>
         <section class="container theme-showcase" role="main" style="height:80%">
-            <!-- <h3>About</h3> -->
-            My name is Steve Göring.
-            I'm a computer scientist and researcher.
-            Currently I'm working at the <a href="http://www.tu-ilmenau.de/en/audio-visual-technology/" target="_blank">Audiovisual Technology Group</a> in Ilmenau.
-            I will share some of my projects and research papers on this page.
-            Most of my developed software is publicly available on github.
+            <p>Here are some of my collected documents (mostly in german):</p>
+<h2>math</h2>
+<ul>
+<li>
+<p><a href="docs/mathe/funktionen.pdf">funktionen</a></p>
+</li>
+<li>
+<p><a href="docs/mathe/expo.pdf">expo</a></p>
+</li>
+<li>
+<p><a href="docs/mathe/pr%C3%BCfungsmix.pdf">prüfungsmix</a></p>
+</li>
+<li>
+<p><a href="docs/mathe/wktrechnung.pdf">wktrechnung</a></p>
+</li>
+<li>
+<p><a href="docs/mathe/dreieck.pdf">dreieck</a></p>
+</li>
+<li>
+<p><a href="docs/mathe/vektoren_%C3%BCbungsaufgaben.pdf">vektoren_übungsaufgaben</a></p>
+</li>
+<li>
+<p><a href="docs/mathe/testpr%C3%BCfung_aufgaben.pdf">testprüfung_aufgaben</a></p>
+</li>
+<li>
+<p><a href="docs/mathe/misch.pdf">misch</a></p>
+</li>
+<li>
+<p><a href="docs/mathe/vektoren.pdf">vektoren</a></p>
+</li>
+<li>
+<p><a href="docs/mathe/fl%C3%A4che.pdf">fläche</a></p>
+</li>
+</ul>
+<h2>university</h2>
+<ul>
+<li><a href="docs/uni/diskrete_mathematik.pdf">diskrete_mathematik</a></li>
+<li><a href="docs/uni/iuk_script.pdf">iuk_script</a></li>
+<li><a href="docs/uni/programmierparadigmen_funktionale_programmierung_haskell.pdf">programmierparadigmen_funktionale_programmierung_haskell</a></li>
+<li><a href="docs/uni/db_spicker.pdf">db_spicker</a></li>
+<li><a href="docs/uni/db_zusammenfassung.pdf">db_zusammenfassung</a></li>
+<li><a href="docs/uni/mathe_1_vorbereitungsaufgaben_Loesungen.pdf">mathe_1_vorbereitungsaufgaben_Loesungen</a></li>
+<li><a href="docs/uni/mathe_2_vorbereitungsaufgaben.pdf">mathe_2_vorbereitungsaufgaben</a></li>
+</ul>
 
-            <h3>projects</h3>
-            Here are some of my projects:
-            <ul>
-                <li><a href="http://stg7.github.io/phrasit/" target="_blank">PhrasIt</a> -- an experimental ngram search engine</li>
-                <li><a href="http://github.com/stg7/ctag/" target="_blank">Ctag</a> -- a generator for cloud tags</li>
-                <!--
-                <li><a href="http://stg7.bplaced.net/" target="_blank">my Homepage</a></li>-->
-                <li><a href="https://bitbucket.org/stg7/" target="_blank">bitbucket</a> -- my bitbucket page</li>
-                <li><a href="https://gist.github.com/stg7" target="_blank">my gists</a> -- my gists on github</li>
-            </ul>
-            You can find more on my <a href="http://github.com/stg7/" target="_blank">github</a> page.
-
-            <h3>publications</h3>
-            In the last years I published several papers on conferences or wrote scientific theses/publications (master, bachelor, or some other short texts).
-            {{pubs}}
-            <h3>contact</h3>
-            <ul>
-                <li>email: <a href="mailto:stg7@gmx.de">stg7@gmx.de</a></li>
-                <li>xmpp: stg7@jabber.ccc.de</li>
-            </ul>
 
         </section>
     </div>
