fix the font bug

--- a/documents.html
+++ b/documents.html
@@ -41,7 +41,7 @@
     <hr>
     <div class="maincontent">
         <section id="toc" class="container theme-showcase">
-        <p><a href="index.html">Start</a> | <a href="documents.html">/Documents/</a> | <a href="publications.html">Publications</a></p>
+        <p><a href="index.html">Start</a> | <a href="documents.html"><em>Documents</em></a> | <a href="publications.html">Publications</a></p>
 
         </section>
         <hr>
