--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <hr>
     <div class="maincontent">
         <section id="toc" class="container theme-showcase">
-        <p><a href="index.html">/Start/</a> | <a href="documents.html">Documents</a> | <a href="publications.html">Publications</a></p>
+        <p><a href="index.html"><em>Start</em></a> | <a href="documents.html">Documents</a> | <a href="publications.html">Publications</a></p>
 
         </section>
         <hr>
