--- a/publications.html
+++ b/publications.html
@@ -41,12 +41,12 @@
     <hr>
     <div class="maincontent">
         <section id="toc" class="container theme-showcase">
-        <p><a href="index.html">Start</a> | <a href="documents.html">Documents</a> | <a href="publications.html">/Publications/</a></p>
+        <p><a href="index.html">Start</a> | <a href="documents.html">Documents</a> | <a href="publications.html"><em>Publications</em></a></p>
 
         </section>
         <hr>
         <section class="container theme-showcase" role="main" style="height:80%">
-            <p><h4 id="bib-year-2018">2018</h4><p  class="bibentries-one-year">
+            <p><h2 id="bib-year-2018">2018</h2><p  class="bibentries-one-year">
   <p class="bibentry">Steve G&#246;ring and Alexander Raake. <b>"deimeq -- A Deep Neural Network Based Hybrid No-reference Image Quality Model." </b><i>Visual Information Processing (EUVIP), 2018 7th European Workshop on</i>. IEEE.
 	2018.
 	
@@ -69,7 +69,7 @@
 		&#160;<a href="./pdfs/2018/deviq_paper.pdf" target="_blank">[pdf]</a>
 		&#160;<a href="./pdfs/2018/deviq_slides.pdf" target="_blank">[slides]</a></p>
 </p>
-<h4 id="bib-year-2017">2017</h4><p  class="bibentries-one-year">
+<h2 id="bib-year-2017">2017</h2><p  class="bibentries-one-year">
   <p class="bibentry">Steve G&#246;ring, Alexander Raake and Bernhard Feiten. <b>"A framework for QoE analysis of encrypted video streams." </b><i>2017 Ninth International Conference on Quality of Multimedia Experience (QoMEX)</i>. May&#160;2017.
 	
 	     pp.&#160;1-3.
@@ -82,12 +82,12 @@
 	
 		&#160;<a href="./pdfs/2017/Qomex2017_Raake_CameraReady.pdf" target="_blank">[pdf]</a></p>
 </p>
-<h4 id="bib-year-2016">2016</h4><p  class="bibentries-one-year">
+<h2 id="bib-year-2016">2016</h2><p  class="bibentries-one-year">
   <p class="bibentry">Matthias Hagen, Michael V&#246;lske, Steve G&#246;ring, and Benno Stein. <b>"Axiomatic Result Re-Ranking." </b><i>Proceedings of the 25th ACM International Conference on Information and Knowledge Management (CIKM 16)</i>. 10&#160;2016.
 	
 		&#160;<a href="./pdfs/2016/axiomatic_result_re-ranking.pdf" target="_blank">[pdf]</a></p>
 </p>
-<h4 id="bib-year-2015">2015</h4><p  class="bibentries-one-year">
+<h2 id="bib-year-2015">2015</h2><p  class="bibentries-one-year">
   <p class="bibentry">Martin Potthast, Steve G&#246;ring, Paolo Rosso, and Benno Stein. <b>"Towards Data Submissions for Shared Tasks: First Experiences for the Task of Text Alignment." </b><i>Working Notes Papers of the CLEF 2015 Evaluation Labs</i>. 09&#160;2015.
 	
 		&#160;<a href="http://www.clef-initiative.eu/publication/working-notes">[url]</a>
@@ -97,13 +97,13 @@
 		&#160;<a href="http://trec.nist.gov/pubs/trec24/trec2015.html">[url]</a>
 		&#160;<a href="./pdfs/2015/trec15.pdf" target="_blank">[pdf]</a></p>
 </p>
-<h4 id="bib-year-2014">2014</h4><p  class="bibentries-one-year">
+<h2 id="bib-year-2014">2014</h2><p  class="bibentries-one-year">
   <p class="bibentry">Matthias Hagen, Steve G&#246;ring, Maximilian Michel, Georg M&#252;ller, and Benno Stein. <b>"Webis at TREC 2014: Web, Session, and Contextual Suggestion Tracks." </b><i>23nd International Text Retrieval Conference (TREC 14)</i>. 11&#160;2014.
 	
 		&#160;<a href="http://trec.nist.gov/pubs/trec23/trec2014.html">[url]</a>
 		&#160;<a href="./pdfs/2014/trec14-proceedings-paper.pdf" target="_blank">[pdf]</a></p>
 </p>
-<h4 id="bib-year-2013">2013</h4><p  class="bibentries-one-year">
+<h2 id="bib-year-2013">2013</h2><p  class="bibentries-one-year">
   <p class="bibentry">Steve G&#246;ring. <b>"Effiziente In-Memory Verarbeitung von SPARQL-Anfragen auf gro&#223;en Datenmengen." </b>12&#160;2013.
 	Masterarbeit, 
 		&#160;<a href="./pdfs/2013/ma.pdf" target="_blank">[pdf]</a>
@@ -116,7 +116,7 @@
 		&#160;<a href="./pdfs/2013/ps.pdf" target="_blank">[pdf]</a>
 		&#160;<a href="./pdfs/2013/ps_slides.pdf" target="_blank">[slides]</a></p>
 </p>
-<h4 id="bib-year-2012">2012</h4><p  class="bibentries-one-year">
+<h2 id="bib-year-2012">2012</h2><p  class="bibentries-one-year">
   <p class="bibentry">Steve G&#246;ring. <b>"Algorithmen zum L&#246;sen von Vertex und Set Cover Instanzen zur Planung von Angriffen auf Netzwerke." </b>06&#160;2012.
 	Hauptseminar, 
 		&#160;<a href="./pdfs/2012/hs.pdf" target="_blank">[pdf]</a>
