--- a/publications.html
+++ b/publications.html
@@ -41,7 +41,7 @@
     <hr>
     <div class="maincontent">
         <section id="toc" class="container theme-showcase">
-        <p><a href="index.html">Start</a> | <a href="documents.html">Documents</a> | <a href="publications.html"><em>Publications</em></a></p>
+        <p><a href="index.html">Start</a> | <a href="photos.html">Photos</a> | <a href="documents.html">Documents</a> | <a href="publications.html"><em>Publications</em></a></p>
 
         </section>
         <hr>
