add comment to repo in index

--- a/index.html
+++ b/index.html
@@ -62,9 +62,16 @@ Most of my developed software is publicly available on github.</p>
 <p>You can find more on my <a href="http://github.com/stg7/" target="_blank">github</a> page.</p>
 <h2>contact</h2>
 <ul>
-<li>email: <a href="mailto:stg7@gmx.de">stg7@gmx.de</a></li>
-<li>xmpp: stg7@jabber.ccc.de</li>
+<li>
+<p>email: <a href="mailto:stg7@gmx.de">stg7@gmx.de</a></p>
+</li>
+<li>
+<p>xmpp: stg7@jabber.ccc.de</p>
+</li>
 </ul>
+<h2>about</h2>
+<p>This webpage is generated using a small python script + a markdown parser.
+Check <a href="https://github.com/stg7/stg7.github.io">https://github.com/stg7/stg7.github.io</a> for more.</p>
 
 
         </section>
