--- a/documents.html
+++ b/documents.html
@@ -48,6 +48,7 @@
         <section class="container theme-showcase" role="main" style="height:80%">
             <p>Here are some of my collected documents (mostly in german):</p>
 <h2>math</h2>
+<p>Documents for school math, e.g. example tasks for specific topics.</p>
 <ul>
 <li>
 <p><a href="docs/mathe/funktionen.pdf">funktionen</a></p>
@@ -81,6 +82,7 @@
 </li>
 </ul>
 <h2>university</h2>
+<p>Scripts, solutions or summaries of some university courses/tasks.</p>
 <ul>
 <li><a href="docs/uni/diskrete_mathematik.pdf">diskrete_mathematik</a></li>
 <li><a href="docs/uni/iuk_script.pdf">iuk_script</a></li>
