add some of my avt/itu-p1203 things to my projects

--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@ Most of my developed software is publicly available on github.</p>
 <ul>
 <li><a href="http://stg7.github.io/phrasit/" target="_blank">PhrasIt</a> -- an experimental ngram search engine</li>
 <li><a href="http://github.com/stg7/ctag/" target="_blank">Ctag</a> -- a generator for cloud tags</li>
+<li><a href="https://github.com/Telecommunication-Telemedia-Assessment/avrateNG" target="_blank">AVRateNG</a> -- a software framework for conducting subjective video tests</li>
+<li><a href="https://github.com/itu-p1203/itu-p1203" target="_blank">ITU P.1203</a> -- reference implementation of P.1203</li>
 <li><a href="https://bitbucket.org/stg7/" target="_blank">bitbucket</a> -- my bitbucket page</li>
 <li><a href="https://gist.github.com/stg7" target="_blank">my gists</a> -- my gists on github</li>
 </ul>
