--- a/photos.html
+++ b/photos.html
@@ -41,7 +41,7 @@
     <hr>
     <div class="maincontent">
         <section id="toc" class="container theme-showcase">
-        <p><a href="index.html">Start</a> | <a href="photos.html"><em>Photos</em></a> | <a href="documents.html">Documents</a> | <a href="publications.html">Publications</a></p>
+        <p><a href="index.html">start</a> | <a href="photos.html"><em>photos</em></a> | <a href="documents.html">documents</a> | <a href="publications.html">publications</a></p>
 
         </section>
         <hr>
