add comment to photos

--- a/photos.html
+++ b/photos.html
@@ -46,7 +46,8 @@
         </section>
         <hr>
         <section class="container theme-showcase" role="main" style="height:80%">
-            <p><a href="photos/large/IMG_8918.JPG" target="_blank"><img src="photos/small/IMG_8918.JPG" /></a>
+            <p>A small selection of some photos.</p>
+<p><a href="photos/large/IMG_8918.JPG" target="_blank"><img src="photos/small/IMG_8918.JPG" /></a>
 <a href="photos/large/IMG_7753.JPG" target="_blank"><img src="photos/small/IMG_7753.JPG" /></a>
 <a href="photos/large/IMG_7817.JPG" target="_blank"><img src="photos/small/IMG_7817.JPG" /></a>
 <a href="photos/large/IMG_5983.JPG" target="_blank"><img src="photos/small/IMG_5983.JPG" /></a>
