add minitoc to publication list

--- a/publications.html
+++ b/publications.html
@@ -46,10 +46,10 @@
         </section>
         <hr>
         <section class="container theme-showcase" role="main" style="height:80%">
-            <p><h2 id="bib-year-2018">2018</h2><p  class="bibentries-one-year">
+            <p> <a href="#bib-year-2018" >2018</a>  |  <a href="#bib-year-2017" >2017</a>  |  <a href="#bib-year-2016" >2016</a>  |  <a href="#bib-year-2015" >2015</a>  |  <a href="#bib-year-2014" >2014</a>  |  <a href="#bib-year-2013" >2013</a>  |  <a href="#bib-year-2012" >2012</a>  <br><h2 id="bib-year-2018">2018</h2><p  class="bibentries-one-year">
   <p class="bibentry">Steve G&#246;ring and Alexander Raake. <b>"deimeq -- A Deep Neural Network Based Hybrid No-reference Image Quality Model." </b><i>Visual Information Processing (EUVIP), 2018 7th European Workshop on</i>. IEEE.
 	2018.
-	
+
 	     pp.&#160;1--6.
 	to appear.
 	</p>
@@ -61,68 +61,68 @@
 	</p>
   <p class="bibentry">Steve G&#246;ring, Konstantin Brand, and Alexander Raake. <b>"Extended Features using Machine Learning Techniques for Photo Liking Prediction." </b><i>2018 Tenth International Conference on Quality of Multimedia Experience (QoMEX) (QoMEX 2018)</i>. Sardinia, Italy.
 	5&#160;2018.
-	
+
 		&#160;<a href="./pdfs/2018/2018-qomex-Extended Features using Machine Learning Techniques for Photo Liking Prediction.pdf" target="_blank">[pdf]</a>
 		&#160;<a href="./pdfs/2018/2018-qomex-Extended Features using Machine Learning Techniques for Photo Liking Prediction_slides.pdf" target="_blank">[slides]</a></p>
   <p class="bibentry">Steve G&#246;ring, Janto Skowronek and Alexander Raake. <b>"DeViQ -- A deep no reference video quality model." </b><i>Electronic Imaging, Human Vision Electronic Imaging</i>. 2018.
-	
+
 		&#160;<a href="./pdfs/2018/deviq_paper.pdf" target="_blank">[pdf]</a>
 		&#160;<a href="./pdfs/2018/deviq_slides.pdf" target="_blank">[slides]</a></p>
 </p>
 <h2 id="bib-year-2017">2017</h2><p  class="bibentries-one-year">
   <p class="bibentry">Steve G&#246;ring, Alexander Raake and Bernhard Feiten. <b>"A framework for QoE analysis of encrypted video streams." </b><i>2017 Ninth International Conference on Quality of Multimedia Experience (QoMEX)</i>. May&#160;2017.
-	
+
 	     pp.&#160;1-3.
-	
+
 		&#160;<a href="./pdfs/2017/qomex_enc_paper.pdf" target="_blank">[pdf]</a>
 		&#160;<a href="./pdfs/2017/qomex_enc_poster.pdf" target="_blank">[poster]</a></p>
   <p class="bibentry">Alexander Raake, Marie-Neige Garcia, Werner Robitza, Peter List, Steve G&#246;ring and Bernhard Feiten. <b>"A bitstream-based, scalable video-quality model for HTTP adaptive streaming: ITU-T P.1203.1." </b><i>2017 Ninth International Conference on Quality of Multimedia Experience (QoMEX)</i>. May&#160;2017.
-	
+
 	     pp.&#160;1-6.
-	
+
 		&#160;<a href="./pdfs/2017/Qomex2017_Raake_CameraReady.pdf" target="_blank">[pdf]</a></p>
 </p>
 <h2 id="bib-year-2016">2016</h2><p  class="bibentries-one-year">
   <p class="bibentry">Matthias Hagen, Michael V&#246;lske, Steve G&#246;ring, and Benno Stein. <b>"Axiomatic Result Re-Ranking." </b><i>Proceedings of the 25th ACM International Conference on Information and Knowledge Management (CIKM 16)</i>. 10&#160;2016.
-	
+
 		&#160;<a href="./pdfs/2016/axiomatic_result_re-ranking.pdf" target="_blank">[pdf]</a></p>
 </p>
 <h2 id="bib-year-2015">2015</h2><p  class="bibentries-one-year">
   <p class="bibentry">Martin Potthast, Steve G&#246;ring, Paolo Rosso, and Benno Stein. <b>"Towards Data Submissions for Shared Tasks: First Experiences for the Task of Text Alignment." </b><i>Working Notes Papers of the CLEF 2015 Evaluation Labs</i>. 09&#160;2015.
-	
+
 		&#160;<a href="http://www.clef-initiative.eu/publication/working-notes">[url]</a>
 		&#160;<a href="./pdfs/2015/pan-text-alignment.pdf" target="_blank">[pdf]</a></p>
   <p class="bibentry">Matthias Hagen, Steve G&#246;ring, Magdalena Keil, Olaoluwa Anifowose, Amir Othman, and Benno Stein. <b>"Webis at TREC 2015: Tasks and Total Recall Tracks." </b><i>24th International Text Retrieval Conference (TREC 15)</i>. 11&#160;2015.
-	
+
 		&#160;<a href="http://trec.nist.gov/pubs/trec24/trec2015.html">[url]</a>
 		&#160;<a href="./pdfs/2015/trec15.pdf" target="_blank">[pdf]</a></p>
 </p>
 <h2 id="bib-year-2014">2014</h2><p  class="bibentries-one-year">
   <p class="bibentry">Matthias Hagen, Steve G&#246;ring, Maximilian Michel, Georg M&#252;ller, and Benno Stein. <b>"Webis at TREC 2014: Web, Session, and Contextual Suggestion Tracks." </b><i>23nd International Text Retrieval Conference (TREC 14)</i>. 11&#160;2014.
-	
+
 		&#160;<a href="http://trec.nist.gov/pubs/trec23/trec2014.html">[url]</a>
 		&#160;<a href="./pdfs/2014/trec14-proceedings-paper.pdf" target="_blank">[pdf]</a></p>
 </p>
 <h2 id="bib-year-2013">2013</h2><p  class="bibentries-one-year">
   <p class="bibentry">Steve G&#246;ring. <b>"Effiziente In-Memory Verarbeitung von SPARQL-Anfragen auf gro&#223;en Datenmengen." </b>12&#160;2013.
-	Masterarbeit, 
+	Masterarbeit,
 		&#160;<a href="./pdfs/2013/ma.pdf" target="_blank">[pdf]</a>
 		&#160;<a href="./pdfs/2013/ma_slides.pdf" target="_blank">[slides]</a></p>
   <p class="bibentry">Rene Golembewski, Steve G&#246;ring, and Guenter Schaefer. <b>"Capabilities and Objectives of Distributed Image Processing on Smart Camera Systems." </b><i>18th IEEE Symposium on Computers and Communications (IEEE ISCC 2013)</i>. 07&#160;2013.
-	
+
 		&#160;<a href="./pdfs/2013/golembewski-iscc-2013.pdf" target="_blank">[pdf]</a></p>
   <p class="bibentry">Steve G&#246;ring. <b>"Extraktion eines Bewegungsmodells basierend auf Kartenmaterial von OpenStreetMap." </b>04&#160;2013.
-	Projektseminar, 
+	Projektseminar,
 		&#160;<a href="./pdfs/2013/ps.pdf" target="_blank">[pdf]</a>
 		&#160;<a href="./pdfs/2013/ps_slides.pdf" target="_blank">[slides]</a></p>
 </p>
 <h2 id="bib-year-2012">2012</h2><p  class="bibentries-one-year">
   <p class="bibentry">Steve G&#246;ring. <b>"Algorithmen zum L&#246;sen von Vertex und Set Cover Instanzen zur Planung von Angriffen auf Netzwerke." </b>06&#160;2012.
-	Hauptseminar, 
+	Hauptseminar,
 		&#160;<a href="./pdfs/2012/hs.pdf" target="_blank">[pdf]</a>
 		&#160;<a href="./pdfs/2012/hs_slides.pdf" target="_blank">[slides]</a></p>
   <p class="bibentry">Steve G&#246;ring. <b>"Automatisierter Entwurf eines Schemas f&#252;r Bitwise Dimensional Clustering." </b>01&#160;2012.
-	Bachelorarbeit, 
+	Bachelorarbeit,
 		&#160;<a href="./pdfs/2012/ba.pdf" target="_blank">[pdf]</a>
 		&#160;<a href="bib/" target="_blank">[bib]</a>
 		&#160;<a href="./pdfs/2012/ba_slides.pdf" target="_blank">[slides]</a></p>
