--- a/index.html
+++ b/index.html
@@ -51,13 +51,16 @@ I'm a computer scientist and researcher.
 Currently I'm working at the <a href="http://www.tu-ilmenau.de/en/audio-visual-technology/" target="_blank">Audiovisual Technology Group</a> in Ilmenau.</p>
 <p>I will share some of my projects and research papers on this page.
 Most of my developed software is publicly available on github.</p>
+<h2>research</h2>
+<p>My current research intersts are video/image quality prediction, image appeal combined with machine learning and processing of large datasets.</p>
+<p>For more checkout my <a href="publications.html">Publications</a>.</p>
 <h2>projects</h2>
 <p>Here are some of my projects:</p>
 <ul>
 <li><a href="http://stg7.github.io/phrasit/" target="_blank">PhrasIt</a> -- an experimental ngram search engine</li>
-<li><a href="http://github.com/stg7/ctag/" target="_blank">Ctag</a> -- a generator for cloud tags</li>
+<li><a href="http://github.com/stg7/ctag/" target="_blank">ctag</a> -- a generator for cloud tags</li>
 <li><a href="https://github.com/Telecommunication-Telemedia-Assessment/avrateNG" target="_blank">AVRateNG</a> -- a software framework for conducting subjective video tests</li>
-<li><a href="https://github.com/itu-p1203/itu-p1203" target="_blank">ITU P.1203</a> -- reference implementation of P.1203</li>
+<li><a href="https://telecommunication-telemedia-assessment.github.io/p1203/" target="_blank">ITU P.1203</a> -- reference implementation and extensions of P.1203</li>
 <li><a href="https://bitbucket.org/stg7/" target="_blank">bitbucket</a> -- my bitbucket page</li>
 <li><a href="https://gist.github.com/stg7" target="_blank">my gists</a> -- my gists on github</li>
 </ul>
