--- a/publications.html
+++ b/publications.html
@@ -46,7 +46,8 @@
         </section>
         <hr>
         <section class="container theme-showcase" role="main" style="height:80%">
-            <p> <a href="#bib-year-2018" >2018</a>  |  <a href="#bib-year-2017" >2017</a>  |  <a href="#bib-year-2016" >2016</a>  |  <a href="#bib-year-2015" >2015</a>  |  <a href="#bib-year-2014" >2014</a>  |  <a href="#bib-year-2013" >2013</a>  |  <a href="#bib-year-2012" >2012</a>  <br> 
+            <p>In the last years I published several papers on conferences or wrote scientific theses/publications (master, bachelor, or some other short texts).</p>
+<p> <a href="#bib-year-2018" >2018</a>  |  <a href="#bib-year-2017" >2017</a>  |  <a href="#bib-year-2016" >2016</a>  |  <a href="#bib-year-2015" >2015</a>  |  <a href="#bib-year-2014" >2014</a>  |  <a href="#bib-year-2013" >2013</a>  |  <a href="#bib-year-2012" >2012</a>  <br> 
 <h2 id="bib-year-2018">2018</h2><p  class="bibentries-one-year">
   <p class="bibentry">Steve G&#246;ring and Alexander Raake. <b>"deimeq -- A Deep Neural Network Based Hybrid No-reference Image Quality Model." </b><i>Visual Information Processing (EUVIP), 2018 7th European Workshop on</i>. IEEE.
 	2018.
