--- a/publications.html
+++ b/publications.html
@@ -47,7 +47,15 @@
         <hr>
         <section class="container theme-showcase" role="main" style="height:80%">
             <p>In the last years I published several papers on conferences or wrote scientific theses/publications (master, bachelor, or some other short texts).</p>
-<p> <a href="#bib-year-2018" >2018</a>  |  <a href="#bib-year-2017" >2017</a>  |  <a href="#bib-year-2016" >2016</a>  |  <a href="#bib-year-2015" >2015</a>  |  <a href="#bib-year-2014" >2014</a>  |  <a href="#bib-year-2013" >2013</a>  |  <a href="#bib-year-2012" >2012</a>  <br> 
+<p> <a href="#bib-year-2019" >2019</a>  |  <a href="#bib-year-2018" >2018</a>  |  <a href="#bib-year-2017" >2017</a>  |  <a href="#bib-year-2016" >2016</a>  |  <a href="#bib-year-2015" >2015</a>  |  <a href="#bib-year-2014" >2014</a>  |  <a href="#bib-year-2013" >2013</a>  |  <a href="#bib-year-2012" >2012</a>  <br> 
+<h2 id="bib-year-2019">2019</h2><p  class="bibentries-one-year">
+  <p class="bibentry">Steve G&#246;ring, Julian Zebelein, Simon Wedel, Dominik Keller and Alexander Raake. <b>"Analyze And Predict the Perceptibility of UHD Video Contents." </b><i>Electronic Imaging, Human Vision Electronic Imaging</i>. 2019.
+	to appear.
+	</p>
+  <p class="bibentry">Rakesh Rao Ramachandra Rao, Steve G&#246;ring, Patrick Vogel, Nicolas Pachatz, Juan Jose Villamar Villarreal, Werner Robitza, Peter List, Bernhard Feiten, and Alexander Raake. <b>"Adaptive video streaming with current codecs and formats: Extensions to parametric video quality model ITU-T P.1203." </b><i>Electronic Imaging, Human Vision Electronic Imaging</i>. 2019.
+	to appear.
+	</p>
+</p>
 <h2 id="bib-year-2018">2018</h2><p  class="bibentries-one-year">
   <p class="bibentry">Steve G&#246;ring and Alexander Raake. <b>"deimeq -- A Deep Neural Network Based Hybrid No-reference Image Quality Model." </b><i>Visual Information Processing (EUVIP), 2018 7th European Workshop on</i>. IEEE.
 	2018.
