--- a/publications.html
+++ b/publications.html
@@ -51,10 +51,14 @@
 <h2 id="bib-year-2019">2019</h2><p  class="bibentries-one-year">
   <p class="bibentry">Steve G&#246;ring, Julian Zebelein, Simon Wedel, Dominik Keller and Alexander Raake. <b>"Analyze And Predict the Perceptibility of UHD Video Contents." </b><i>Electronic Imaging, Human Vision Electronic Imaging</i>. 2019.
 	to appear.
-	</p>
+	
+		&#160;<a href="./bibs/goering2019.bib" target="_blank">[bib]</a></p>
+</p>
+<p  class="bibentries-one-year">
   <p class="bibentry">Rakesh Rao Ramachandra Rao, Steve G&#246;ring, Patrick Vogel, Nicolas Pachatz, Juan Jose Villamar Villarreal, Werner Robitza, Peter List, Bernhard Feiten, and Alexander Raake. <b>"Adaptive video streaming with current codecs and formats: Extensions to parametric video quality model ITU-T P.1203." </b><i>Electronic Imaging, Human Vision Electronic Imaging</i>. 2019.
 	to appear.
-	</p>
+	
+		&#160;<a href="./bibs/rao2019.bib" target="_blank">[bib]</a></p>
 </p>
 <h2 id="bib-year-2018">2018</h2><p  class="bibentries-one-year">
   <p class="bibentry">Steve G&#246;ring and Alexander Raake. <b>"deimeq -- A Deep Neural Network Based Hybrid No-reference Image Quality Model." </b><i>Visual Information Processing (EUVIP), 2018 7th European Workshop on</i>. IEEE.
@@ -62,21 +66,34 @@
 	
 	     pp.&#160;1--6.
 	to appear.
-	</p>
+	
+		&#160;<a href="./bibs/goering2018Deimeq.bib" target="_blank">[bib]</a></p>
+</p>
+<p  class="bibentries-one-year">
   <p class="bibentry">Werner Robitza, Steve G&#246;ring, Alexander Raake, David Lindegren, Gunnar Heikkil&#228;, J&#246;rgen Gustafsson, Peter List, Bernhard Feiten, Ulf W&#252;stenhagen, Marie-Neige Garcia, Kazuhisa Yamagishi, and Simon Broom. <b>"HTTP Adaptive Streaming QoE Estimation with ITU-T Rec. P.1203 -- Open Databases and Software." </b><i>9th ACM Multimedia Systems Conference</i>. Amsterdam.
 	2018.
-	</p>
+	
+		&#160;<a href="./bibs/Robitza2017d.bib" target="_blank">[bib]</a></p>
+</p>
+<p  class="bibentries-one-year">
   <p class="bibentry">Werner Robitza, Dhananjay Kittur, Alexander Dethof, Steve G&#246;ring, Bernhard Feiten, and Alexander Raake. <b>"Measuring YouTube QoE Under Constrained Bandwidth Conditions - Comparing Classical and Behavioral Monitoring." </b><i>2018 Tenth International Conference on Quality of Multimedia Experience (QoMEX) (QoMEX 2018)</i>. Sardinia, Italy.
 	5&#160;2018.
-	</p>
+	
+		&#160;<a href="./bibs/Robi1805_Measuring.bib" target="_blank">[bib]</a></p>
+</p>
+<p  class="bibentries-one-year">
   <p class="bibentry">Steve G&#246;ring, Konstantin Brand, and Alexander Raake. <b>"Extended Features using Machine Learning Techniques for Photo Liking Prediction." </b><i>2018 Tenth International Conference on Quality of Multimedia Experience (QoMEX) (QoMEX 2018)</i>. Sardinia, Italy.
 	5&#160;2018.
 	
 		&#160;<a href="./pdfs/2018/2018-qomex-Extended Features using Machine Learning Techniques for Photo Liking Prediction.pdf" target="_blank">[pdf]</a>
+		&#160;<a href="./bibs/Gori1805_Extended.bib" target="_blank">[bib]</a>
 		&#160;<a href="./pdfs/2018/2018-qomex-Extended Features using Machine Learning Techniques for Photo Liking Prediction_slides.pdf" target="_blank">[slides]</a></p>
+</p>
+<p  class="bibentries-one-year">
   <p class="bibentry">Steve G&#246;ring, Janto Skowronek and Alexander Raake. <b>"DeViQ -- A deep no reference video quality model." </b><i>Electronic Imaging, Human Vision Electronic Imaging</i>. 2018.
 	
 		&#160;<a href="./pdfs/2018/deviq_paper.pdf" target="_blank">[pdf]</a>
+		&#160;<a href="./bibs/goering2018.bib" target="_blank">[bib]</a>
 		&#160;<a href="./pdfs/2018/deviq_slides.pdf" target="_blank">[slides]</a></p>
 </p>
 <h2 id="bib-year-2017">2017</h2><p  class="bibentries-one-year">
@@ -85,56 +102,76 @@
 	     pp.&#160;1-3.
 	
 		&#160;<a href="./pdfs/2017/qomex_enc_paper.pdf" target="_blank">[pdf]</a>
+		&#160;<a href="./bibs/goering2017_81.bib" target="_blank">[bib]</a>
 		&#160;<a href="./pdfs/2017/qomex_enc_poster.pdf" target="_blank">[poster]</a></p>
+</p>
+<p  class="bibentries-one-year">
   <p class="bibentry">Alexander Raake, Marie-Neige Garcia, Werner Robitza, Peter List, Steve G&#246;ring and Bernhard Feiten. <b>"A bitstream-based, scalable video-quality model for HTTP adaptive streaming: ITU-T P.1203.1." </b><i>2017 Ninth International Conference on Quality of Multimedia Experience (QoMEX)</i>. May&#160;2017.
 	
 	     pp.&#160;1-6.
 	
-		&#160;<a href="./pdfs/2017/Qomex2017_Raake_CameraReady.pdf" target="_blank">[pdf]</a></p>
+		&#160;<a href="./pdfs/2017/Qomex2017_Raake_CameraReady.pdf" target="_blank">[pdf]</a>
+		&#160;<a href="./bibs/raake2017_71.bib" target="_blank">[bib]</a></p>
 </p>
 <h2 id="bib-year-2016">2016</h2><p  class="bibentries-one-year">
   <p class="bibentry">Matthias Hagen, Michael V&#246;lske, Steve G&#246;ring, and Benno Stein. <b>"Axiomatic Result Re-Ranking." </b><i>Proceedings of the 25th ACM International Conference on Information and Knowledge Management (CIKM 16)</i>. 10&#160;2016.
 	
-		&#160;<a href="./pdfs/2016/axiomatic_result_re-ranking.pdf" target="_blank">[pdf]</a></p>
+		&#160;<a href="./pdfs/2016/axiomatic_result_re-ranking.pdf" target="_blank">[pdf]</a>
+		&#160;<a href="./bibs/axiomatic2016.bib" target="_blank">[bib]</a></p>
 </p>
 <h2 id="bib-year-2015">2015</h2><p  class="bibentries-one-year">
   <p class="bibentry">Martin Potthast, Steve G&#246;ring, Paolo Rosso, and Benno Stein. <b>"Towards Data Submissions for Shared Tasks: First Experiences for the Task of Text Alignment." </b><i>Working Notes Papers of the CLEF 2015 Evaluation Labs</i>. 09&#160;2015.
 	
 		&#160;<a href="http://www.clef-initiative.eu/publication/working-notes">[url]</a>
-		&#160;<a href="./pdfs/2015/pan-text-alignment.pdf" target="_blank">[pdf]</a></p>
+		&#160;<a href="./pdfs/2015/pan-text-alignment.pdf" target="_blank">[pdf]</a>
+		&#160;<a href="./bibs/pan2015.bib" target="_blank">[bib]</a></p>
+</p>
+<p  class="bibentries-one-year">
   <p class="bibentry">Matthias Hagen, Steve G&#246;ring, Magdalena Keil, Olaoluwa Anifowose, Amir Othman, and Benno Stein. <b>"Webis at TREC 2015: Tasks and Total Recall Tracks." </b><i>24th International Text Retrieval Conference (TREC 15)</i>. 11&#160;2015.
 	
 		&#160;<a href="http://trec.nist.gov/pubs/trec24/trec2015.html">[url]</a>
-		&#160;<a href="./pdfs/2015/trec15.pdf" target="_blank">[pdf]</a></p>
+		&#160;<a href="./pdfs/2015/trec15.pdf" target="_blank">[pdf]</a>
+		&#160;<a href="./bibs/trec2015.bib" target="_blank">[bib]</a></p>
 </p>
 <h2 id="bib-year-2014">2014</h2><p  class="bibentries-one-year">
   <p class="bibentry">Matthias Hagen, Steve G&#246;ring, Maximilian Michel, Georg M&#252;ller, and Benno Stein. <b>"Webis at TREC 2014: Web, Session, and Contextual Suggestion Tracks." </b><i>23nd International Text Retrieval Conference (TREC 14)</i>. 11&#160;2014.
 	
 		&#160;<a href="http://trec.nist.gov/pubs/trec23/trec2014.html">[url]</a>
-		&#160;<a href="./pdfs/2014/trec14-proceedings-paper.pdf" target="_blank">[pdf]</a></p>
+		&#160;<a href="./pdfs/2014/trec14-proceedings-paper.pdf" target="_blank">[pdf]</a>
+		&#160;<a href="./bibs/trec2014.bib" target="_blank">[bib]</a></p>
 </p>
 <h2 id="bib-year-2013">2013</h2><p  class="bibentries-one-year">
   <p class="bibentry">Steve G&#246;ring. <b>"Effiziente In-Memory Verarbeitung von SPARQL-Anfragen auf gro&#223;en Datenmengen." </b>12&#160;2013.
 	Masterarbeit, 
 		&#160;<a href="./pdfs/2013/ma.pdf" target="_blank">[pdf]</a>
+		&#160;<a href="./bibs/ma_2013.bib" target="_blank">[bib]</a>
 		&#160;<a href="./pdfs/2013/ma_slides.pdf" target="_blank">[slides]</a></p>
+</p>
+<p  class="bibentries-one-year">
   <p class="bibentry">Rene Golembewski, Steve G&#246;ring, and Guenter Schaefer. <b>"Capabilities and Objectives of Distributed Image Processing on Smart Camera Systems." </b><i>18th IEEE Symposium on Computers and Communications (IEEE ISCC 2013)</i>. 07&#160;2013.
 	
-		&#160;<a href="./pdfs/2013/golembewski-iscc-2013.pdf" target="_blank">[pdf]</a></p>
+		&#160;<a href="./pdfs/2013/golembewski-iscc-2013.pdf" target="_blank">[pdf]</a>
+		&#160;<a href="./bibs/Gole1307_Capabilities.bib" target="_blank">[bib]</a></p>
+</p>
+<p  class="bibentries-one-year">
   <p class="bibentry">Steve G&#246;ring. <b>"Extraktion eines Bewegungsmodells basierend auf Kartenmaterial von OpenStreetMap." </b>04&#160;2013.
 	Projektseminar, 
 		&#160;<a href="./pdfs/2013/ps.pdf" target="_blank">[pdf]</a>
+		&#160;<a href="./bibs/ps_2013.bib" target="_blank">[bib]</a>
 		&#160;<a href="./pdfs/2013/ps_slides.pdf" target="_blank">[slides]</a></p>
 </p>
 <h2 id="bib-year-2012">2012</h2><p  class="bibentries-one-year">
   <p class="bibentry">Steve G&#246;ring. <b>"Algorithmen zum L&#246;sen von Vertex und Set Cover Instanzen zur Planung von Angriffen auf Netzwerke." </b>06&#160;2012.
 	Hauptseminar, 
 		&#160;<a href="./pdfs/2012/hs.pdf" target="_blank">[pdf]</a>
+		&#160;<a href="./bibs/hs_2012.bib" target="_blank">[bib]</a>
 		&#160;<a href="./pdfs/2012/hs_slides.pdf" target="_blank">[slides]</a></p>
+</p>
+<p  class="bibentries-one-year">
   <p class="bibentry">Steve G&#246;ring. <b>"Automatisierter Entwurf eines Schemas f&#252;r Bitwise Dimensional Clustering." </b>01&#160;2012.
 	Bachelorarbeit, 
 		&#160;<a href="./pdfs/2012/ba.pdf" target="_blank">[pdf]</a>
-		&#160;<a href="bib/" target="_blank">[bib]</a>
+		&#160;<a href="./bibs/ba_2012.bib" target="_blank">[bib]</a>
 		&#160;<a href="./pdfs/2012/ba_slides.pdf" target="_blank">[slides]</a></p>
 </p>
 </p>
