add stephans paper, where i'm also now author ;)

--- a/publications.html
+++ b/publications.html
@@ -55,7 +55,13 @@
 		&#160;<a href="./bibs/goering2019.bib" target="_blank">[bib]</a></p>
 </p>
 <p  class="bibentries-one-year">
-  <p class="bibentry">Rakesh Rao Ramachandra Rao, Steve G&#246;ring, Patrick Vogel, Nicolas Pachatz, Juan Jose Villamar Villarreal, Werner Robitza, Peter List, Bernhard Feiten, and Alexander Raake. <b>"Adaptive video streaming with current codecs and formats: Extensions to parametric video quality model ITU-T P.1203." </b><i>Electronic Imaging, Human Vision Electronic Imaging</i>. 2019.
+  <p class="bibentry">Stephan Fremerey, Rachel Huang, Steve G&#246;ring, and Alexander Raake. <b>"Are people pixel-peeping 360&#176; videos?." </b><i>Electronic Imaging, Human Vision Electronic Imaging</i>. 2019.
+	to appear.
+	
+		&#160;<a href="./bibs/fremerey2019.bib" target="_blank">[bib]</a></p>
+</p>
+<p  class="bibentries-one-year">
+  <p class="bibentry">Rakesh Rao Ramachandra Rao, Steve G&#246;ring, Patrick Vogel, Nicolas Pachatz, Juan Jose Villamar Villarreal, Werner Robitza, Peter List, Bernhard Feiten, and Alexander Raake. <b>"Adaptive video streaming with current codecs and formats: Extensions to parametric video quality model ITU-T P.1203." </b><i>Electronic Imaging</i>. 2019.
 	to appear.
 	
 		&#160;<a href="./bibs/rao2019.bib" target="_blank">[bib]</a></p>
