--- a/publications.html
+++ b/publications.html
@@ -41,7 +41,7 @@
     <hr>
     <div class="maincontent">
         <section id="toc" class="container theme-showcase">
-        <p><a href="index.html">start</a> | <a href="photos.html">photos</a> | <a href="documents.html">documents</a> | <a href="publications.html"><em>publications</em></a></p>
+        <p><a href="index.html">start</a> | <a href="publications.html"><em>publications</em></a> | <a href="documents.html">documents</a> | <a href="photos.html">photos</a> | <a href="blog/2017-10-23.html">blog/2017-10-23</a> | <a href="blog/2017-10-25.html">blog/2017-10-25</a> | <a href="blog/2017-10-24.html">blog/2017-10-24</a></p>
 
         </section>
         <hr>
@@ -73,7 +73,8 @@
 	     pp.&#160;1--6.
 	to appear.
 	
-		&#160;<a href="./bibs/goering2018Deimeq.bib" target="_blank">[bib]</a></p>
+		&#160;<a href="./bibs/goering2018Deimeq.bib" target="_blank">[bib]</a>
+		&#160;<a href="./pdfs/2018/deimeq_slides.pdf" target="_blank">[slides]</a></p>
 </p>
 <p  class="bibentries-one-year">
   <p class="bibentry">Werner Robitza, Steve G&#246;ring, Alexander Raake, David Lindegren, Gunnar Heikkil&#228;, J&#246;rgen Gustafsson, Peter List, Bernhard Feiten, Ulf W&#252;stenhagen, Marie-Neige Garcia, Kazuhisa Yamagishi, and Simon Broom. <b>"HTTP Adaptive Streaming QoE Estimation with ITU-T Rec. P.1203 -- Open Databases and Software." </b><i>9th ACM Multimedia Systems Conference</i>. Amsterdam.
